build: Migrate to Java 21, Spring Boot 3.2 and Gradle 8.7